# rag-assignment

./: .env.example  CLAUDE.md  Makefile  README.md  pyproject.toml
configs/prompt_template/: fewshot_template.yaml  qa_prompt.yaml  qa_prompt_kor.yaml
data/raw/: whisky_qnas.csv  whisky_reviews.csv
demo/: function_utils.py  main.py
demo/app/: rag_application.py  rag_settings.py
demo/home/: home.py
logs/QA_RAG_251117_173509/: prompt.yaml
logs/QA_RAG_251117_173509/db/: index.pkl
logs/QA_RAG_251117_212237/: rag_config.yaml
logs/QA_RAG_251117_212237/db/: index.pkl
notebooks/: 1.EDA.ipynb  2.preprocessing.ipynb  3.document_loader.ipynb  3.get_embedding.ipynb  4.get_embedding.ipynb  5.vector_db.ipynb  6.get_llm.ipynb  7.prompts.ipynb  8.build_simple_chain.ipynb  saved_fewshot_prompt.yaml  saved_qa_prompt.yaml
src/rag_pkg/: chains.py
src/rag_pkg/module/: models.py  preprocess.py  prompts.py  vector_db.py
src/rag_pkg/utils/: config_loader.py  path.py  rag_utils.py
