[project]
name = "rag-assignment"
version = "0.1.0"
description = "RAG Assignment"
readme = "README.md"
requires-python = ">=3.12"

authors = [
    { name = "KMYU", email = "sguys99@gmail.com" } # Optional
]

maintainers = [
    { name = "KMYU", email = "sguys99@gmail.com" } # Optional
]

dependencies = [
    "chromadb>=1.3.4",
    "faiss-cpu>=1.12.0",
    "grandalf>=0.8",
    "jupyter>=1.1.1",
    "langchain>=1.0.7",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.0.3",
    "langchain-openai>=1.0.3",
    "langchain-pinecone>=0.2.13",
    "langgraph>=1.0.3",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "streamlit>=1.51.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_pkg"]
